--- a/Angular/landing-page/src/app/components/home/home.component.html
+++ b/Angular/landing-page/src/app/components/home/home.component.html
@@ -18,13 +18,13 @@
     [loading]="loading()"
       />
 
-    <btn-primary btn-text="Alterar" variant="primary" (submit)="onSubmit()"
+    <!-- <btn-primary btn-text="Alterar" variant="primary" (submit)="onSubmit()"
       [disabled]="!newsletterForm.valid" [loading]="loading()"
     />
 
     <btn-primary btn-text="Excluir" variant="primary" (submit)="onSubmit()"
       [disabled]="!newsletterForm.valid" [loading]="loading()"
-    />
+    /> -->
 
 
   </div>
