--- a/Angular/landing-page/src/app/components/lista-pessoas/lista-pessoas.component.scss
+++ b/Angular/landing-page/src/app/components/lista-pessoas/lista-pessoas.component.scss
@@ -1,5 +1,20 @@
-table{
-  display: flex;
-  flex-direction: column;
+table {
   width: 100%;
+  border-collapse: collapse;
+  border-radius: 8px;
+}
+
+th, td {
+  padding: 8px;
+  text-align: center;
+  border-bottom: 1px solid #ddd;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+.mat-icon-button {
+  cursor: pointer;
+  border: none;
 }
